Bug 367006 - Konsole doesn't show crash dialog when it crashes
Summary: Konsole doesn't show crash dialog when it crashes
Status: RESOLVED FIXED
Alias: None
Product: konsole
Classification: Applications
Component: general (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Konsole Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-08-16 21:19 UTC by Wolfgang Bauer
Modified: 2016-08-31 12:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wolfgang Bauer 2016-08-16 21:19:25 UTC
In 16.08.0 (and master) konsole doesn't open a crash dialog when it crashes.

Reproducible: Always

Steps to Reproduce:
1. Run konsole
2. Send it an "ILL" signal, either via ksysguard or kill

Actual Results:  
Konsole window just disappears, if you started konsole from a shell the shell will display "Illegal instruction".

Expected Results:  
Drkonqi should appear, notifying the user of the crash, allowing to get a backtrace and file a bug report.

Konsole would need to link against KCrash and call KCrash::initialize() as explained here:
https://api.kde.org/frameworks/kcrash/html/namespaceKCrash.html#af3cbae2933366133fd4e666568521232
Comment 1 Kurt Hindenburg 2016-08-28 16:13:15 UTC
OK thanks, that's news to me - I didn't realize something had changed that required every app to call that now.
Comment 2 Kurt Hindenburg 2016-08-28 19:06:49 UTC
Git commit 30fe2a0b9d93617c80f6e3d5a61d845a5fb526ab by Kurt Hindenburg.
Committed on 28/08/2016 at 19:05.
Pushed by hindenburg into branch 'master'.

Add KCrash code so krkonqi crash dialog works again

M  +1    -1    CMakeLists.txt
M  +1    -0    src/CMakeLists.txt
M  +3    -0    src/main.cpp

http://commits.kde.org/konsole/30fe2a0b9d93617c80f6e3d5a61d845a5fb526ab
Comment 3 Wolfgang Bauer 2016-08-29 12:11:08 UTC
(In reply to Kurt Hindenburg from comment #1)
> OK thanks, that's news to me - I didn't realize something had changed that
> required every app to call that now.

kdelibs4support takes care of it, but that's not used any more in konsole 16.08...

AFAIK it is not even necessary to call KCrash::initialize() at all, just *linking* to KCrash should enable the crash dialog.
But cmake or the linker may optimize that out, so KCrash::initialize() was added in Frameworks 5.15 to be able to make sure KCrash is linked in by calling that.

See https://git.reviewboard.kde.org/r/126868/ and the links to the mailinglist discussion mentioned there.
Comment 4 Kurt Hindenburg 2016-08-31 12:49:06 UTC
Git commit 391828aa2313f06b0ccc3ad2c60bf0661703e236 by Kurt Hindenburg.
Committed on 31/08/2016 at 12:37.
Pushed by hindenburg into branch 'Applications/16.08'.

Add KCrash code so krkonqi crash dialog works again
(cherry picked from commit 30fe2a0b9d93617c80f6e3d5a61d845a5fb526ab)

M  +1    -1    CMakeLists.txt
M  +1    -0    src/CMakeLists.txt
M  +3    -0    src/main.cpp

http://commits.kde.org/konsole/391828aa2313f06b0ccc3ad2c60bf0661703e236