Add KCrash code so krkonqi crash dialog works again

BUG: 367006
(cherry picked from commit 30fe2a0b9d93617c80f6e3d5a61d845a5fb526ab)